--- a/index.css
+++ b/index.css
@@ -27,22 +27,6 @@
   margin: 13px 58px 41px auto;
 }
 
-.mask1 {
-    -webkit-mask-image: url("images/mask1.png");
-    mask-image: url("images/mask1.png");
-    mask-repeat: no-repeat;
-}
-.mask2 {
-    -webkit-mask-image: url("images/mask2.png");
-    mask-image: url("images/mask2.png");
-    mask-repeat: no-repeat;
-}
-.mask3 {
-    -webkit-mask-image: url("images/mask3.png");
-    mask-image: url("images/mask3.png");
-    mask-repeat: no-repeat;
-}
-
 .u-section-1 .embed-responsive-1 {
   position: absolute;
   width: 178%;
@@ -122,9 +106,10 @@
   margin-bottom: 0;
 }
 
-.u-section-2 .u-text-1 {
-  margin: 21px auto 0 22px;
-}
+    .u-section-2 .u-text-1 {
+        margin: 21px auto 0 22px;
+        
+    }
 
 .u-section-2 .u-group-1 {
   --radius: 30px;
@@ -146,6 +131,10 @@
 
 .u-section-2 .u-text-2 {
   margin: 0;
+}
+
+, u-pink-color {
+    color: #ff00ff !important;
 }
 
 .u-section-2 .u-rotation-parent-1 {
